# slanguage

./: .gitignore  CMakeLists.txt  README.md
compiler/: Lexer.cpp  Lexer.h  Scanner.cpp  Scanner.h  main.cpp
compiler/ast/: AST.h  NodeVisitor.cpp  NodeVisitor.h  ProgramNode.cpp  ProgramNode.h
compiler/ast/expression/: BinaryExpressionNode.cpp  BinaryExpressionNode.h  ExpressionNode.cpp  ExpressionNode.h  NumberNode.cpp  NumberNode.h  UnaryExpressionNode.cpp  UnaryExpressionNode.h
compiler/ast/statement/: PrintNode.cpp  PrintNode.h  StatementNode.cpp  StatementNode.h
compiler/ir/: IRGenerator.cpp  IRGenerator.h
compiler/lexer/: Lexer.cpp  Lexer.h  Token.h  Utils.cpp  Utils.h
compiler/parser/: Parser.cpp  Parser.h  grammar
tests/: main.sl
